update: タグボタンを収納

--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
           id="search-box"
           placeholder="キーワードを入力 (例: Gmail, 送信)"
         />
-        <div class="tags-container" id="tags-container">
-          <p>タグで絞り込み:</p>
+        <div class="tags-container">
+          <details>
+            <summary class="tags-summary">タグで絞り込む</summary>
+            <div class="tags-list" id="tags-list-container"></div>
+          </details>
         </div>
       </section>
 
