--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav id="nav-placeholder"></nav>
 
     <main class="main-container">
-      <section class="search-section">
+      <section class="search-section card">
         <h2>チートシート検索</h2>
 
         <a href="#reverse-lookup-section" class="reverse-lookup-button">
@@ -39,12 +39,12 @@
         </div>
       </section>
 
-      <section class="results-section">
+      <section class="results-section card">
         <h3 id="results-count"></h3>
         <div class="results-grid" id="results-grid"></div>
       </section>
 
-      <section id="reverse-lookup-section" class="reverse-lookup-section">
+      <section id="reverse-lookup-section card" class="reverse-lookup-section">
         <h2>やりたいことから探す（逆引き一覧）</h2>
         <div id="reverse-lookup-list"></div>
       </section>
