fix: 逆引き文言修正

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2>チートシート検索</h2>
 
         <a href="#reverse-lookup-section" class="reverse-lookup-button">
-          ↓ やりたいことから探す 逆引き検索 ↓
+          ↓ やりたいことから 逆引一覧 ↓
         </a>
         <input
           type="search"
@@ -45,7 +45,7 @@
       </section>
 
       <section id="reverse-lookup-section card" class="reverse-lookup-section">
-        <h2>やりたいことから探す（逆引き一覧）</h2>
+        <h2>やりたいことから探す 逆引一覧</h2>
         <div id="reverse-lookup-list"></div>
       </section>
     </main>
