fix: 逆引きボタン

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="results-grid" id="results-grid"></div>
       </section>
 
-      <section id="reverse-lookup-section card" class="reverse-lookup-section">
+      <section id="reverse-lookup-section" class="reverse-lookup-section card">
         <h2>やりたいことから探す 逆引一覧</h2>
         <div id="reverse-lookup-list"></div>
       </section>
